--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.15",
+    "pocketbase": "^0.21.5",
     "react": "^18",
     "react-dom": "^18"
   },
