Fix path for .lando.env.

--- a/.lando.env
+++ b/.lando.env
@@ -1,3 +1,4 @@
 POCKETBASE_URL=http://db.authexample.lndo.site
 POCKETBASE_ADMIN=admin@example.com
 POCKETBASE_ADMIN_PASSWORD=In5ecureP4S123
+NEXT_PUBLIC_BASE_URL=https://authexample.lndo.site
